# DeepAgent_with_Sandbox

./: AGENTS.md  README.md  main.py  pyproject.toml  test.ipynb  test_e2b.ipynb
Strategy/: docker-sandbox-strategy.md  e2b-sandbox-strategy.md
deepagent_lang/: __init__.py  e2b_analysis_tool.py  local_python_tool.py
sample_data/: expenses.csv
tests/: test_e2b_analysis_tool.py  test_local_python_tool.py
tests/fixtures/: numbers.csv
