[project]
name = "deepagent-lang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.11",
    "e2b>=2.15.2",
    "e2b-code-interpreter>=2.4.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-modal>=0.0.2",
    "langchain-openai>=1.1.11",
]
